<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titleBlock"
        android:text="@string/login"
        android:background="#0c6"
        android:textColor="#fff"
        android:gravity="center"
        android:layout_marginBottom="8dp"
        android:padding="15dp"/>

    <TextView
        android:id="@+id/btnLogar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="#0c6"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/logar"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/labelUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_alignBottom="@+id/edirUser"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/titleBlock"
        android:gravity="center_vertical"
        android:text="@string/username" />

    <EditText
        android:id="@+id/edirUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/titleBlock"
        android:layout_toEndOf="@+id/labelUser" />

    <TextView
        android:id="@+id/labelPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_alignBottom="@+id/edirPass"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edirUser"
        android:gravity="center_vertical"
        android:text="@string/password" />

    <EditText
        android:id="@+id/edirPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/edirUser"
        android:layout_toEndOf="@+id/labelUser" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSubmit"
        android:layout_centerInParent="true"
        android:text="@string/enviar"
        android:background="#6c6"
        android:textColor="#fff"
        android:layout_below="@+id/labelPass" />

    <RelativeLayout
        android:id="@+id/diver1"
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_below="@+id/buttonSubmit"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="#ccc"
        android:orientation="horizontal"/>

    <TextView
        android:id="@+id/labelComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/diver1"
        android:gravity="center_vertical"
        android:text="@string/comentarios" />

    <EditText
        android:id="@+id/txtComment"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/labelComment" />

    <Button
        android:id="@+id/deletar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtComment"
        android:text="@string/deletar" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/txtComment"
        android:text="@string/salvar" />
</RelativeLayout>